; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/acpi/acpidump/extr_acpi_user.c_acpi_map_physical.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/acpi/acpidump/extr_acpi_user.c_acpi_map_physical.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_user_mapping = type { i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @acpi_map_physical(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.acpi_user_mapping*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i64, i64* %4, align 8
  %8 = call %struct.acpi_user_mapping* @acpi_user_find_mapping(i8* %6, i64 %7)
  store %struct.acpi_user_mapping* %8, %struct.acpi_user_mapping** %5, align 8
  %9 = load %struct.acpi_user_mapping*, %struct.acpi_user_mapping** %5, align 8
  %10 = getelementptr inbounds %struct.acpi_user_mapping, %struct.acpi_user_mapping* %9, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = load %struct.acpi_user_mapping*, %struct.acpi_user_mapping** %5, align 8
  %14 = getelementptr inbounds %struct.acpi_user_mapping, %struct.acpi_user_mapping* %13, i32 0, i32 1
  %15 = load i8*, i8** %14, align 8
  %16 = ptrtoint i8* %12 to i64
  %17 = ptrtoint i8* %15 to i64
  %18 = sub i64 %16, %17
  %19 = getelementptr i8, i8* %11, i64 %18
  ret i8* %19
}

declare dso_local %struct.acpi_user_mapping* @acpi_user_find_mapping(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
